--- a/ydotcom/accounts/templates/accounts/accountsPage.html
+++ b/ydotcom/accounts/templates/accounts/accountsPage.html
@@ -1,1 +1,5 @@
 <h1>{{ title }}</h1>
+
+<a href="{% url 'login' %}">Login</a>
+<a href="{% url 'logout' %}">logout</a>
+<a href="{% url 'register' %}">register</a>
