--- a/ydotcom/posts/templates/posts/partials/postCard.html
+++ b/ydotcom/posts/templates/posts/partials/postCard.html
@@ -1,4 +1,4 @@
-<div class="card" style="width: 18rem;">
+<div class="card row" style="width: 18rem;">
     <div class="card-body">
       <h5 class="card-title">{{ poster }}</h5>
       <h6 class="card-subtitle mb-2 text-muted">{{ day }}</h6>
