--- a/ydotcom/posts/templates/posts/userPosts.html
+++ b/ydotcom/posts/templates/posts/userPosts.html
@@ -1,29 +1,40 @@
 {% extends 'main/base.html' %}
 
 {% block content %}
-
-<div class="container ">
-    <div class="col">
-        <div class="row">
+<div class="container">
+    <div class="col-lg-8">
+        <div class="row justify-content-center title">
+            <h2>{{ poster.username }}'s Posts</h2>
             {% if poster.username == user.username %}
-                <!-- <a href="#" id="addPost" class="btn btn-primary">Add new Post</a> -->
+            <a href="#" id="addPost" class="btn btn-primary">Add new Post</a>
             {% endif %}
-        </div>
-        <div class="row container text-center m-4">
-            <div class="col justify-content-center">
-                {% for day, posts in posts.items %}
-                    <h2>{{ day }}</h2>
-                    {% for post in posts %}
+          </div>
+          <div class="timeline">
+            <div class="container">
+              <div class="row">
+                <div class="col-lg-12">
+                  <div class="timeline-container">
+                    
+                    <div class="mt-4 timeline-continue">
+          
+                    {% for day, posts in posts.items %}
+                    <h2 class=" mt-2 ">{{ day }}</h2>
+                        {% for post in posts %}
                         <ul>
                             {% include "posts/partials/postCard.html" %}
                         </ul>
                     {% endfor %}
                     {% empty %}
                     <p>This user hasn't made any posts yet.</p>
-                {% endfor %}
+                     {% endfor %}
+                    
+                  </div>
+                </div>
+              </div>
             </div>
         </div>
     </div>
 </div>
 
 {% endblock %}
+
