update UI for user post cards

--- a/ydotcom/posts/templates/posts/partials/postCard.html
+++ b/ydotcom/posts/templates/posts/partials/postCard.html
@@ -1,7 +1,12 @@
-<div class="card row" style="width: 18rem;">
-    <div class="card-body">
-      <h5 class="card-title">{{ poster }}</h5>
-      <h6 class="card-subtitle mb-2 text-muted">{{ day }}</h6>
-      <p class="card-text">{{ post }}</p>
+<div class="row timeline-right border">
+  <div class="col-md-6">
+    <div class="timeline-box">
+      <div class="timeline-icon">
+      </div>
+      <div class="timeline-text">
+        <h3>{{ Poster.username }}</h3>
+        <p>{{ post }}</p>
+      </div>
     </div>
   </div>
+</div>
