--- a/ydotcom/main/templates/main/base.html
+++ b/ydotcom/main/templates/main/base.html
@@ -1,8 +1,12 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-   
+
+    <link rel="stylesheet" href="{% static '/posts/style.css' %}">
+    
     <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
 
     <meta charset="UTF-8">
@@ -21,9 +25,10 @@
 </head>
 <body>
     {% include "partials/navbar.html" %}
-    <main class="container h-100">
-        {% block content %}
-        {% endblock %}
+    
+    <main id="main"> 
+    {% block content %}
+    {% endblock %}
     </main>
 </body>
 
