--- a/ydotcom/posts/templates/posts/userPosts.html
+++ b/ydotcom/posts/templates/posts/userPosts.html
@@ -9,7 +9,7 @@
             <h2>{{ poster.username }}'s Posts</h2>
             {% if poster.username == user.username %}
               <div class="container">
-                <a type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#newPostModal">New Post</a>
+                <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#newPostModal">New Post</button>
                 {% include "posts/partials/newPostModal.html" %}
               </div>
             {% endif %}
@@ -19,26 +19,40 @@
               <div class="row">
                 <div class="col-lg-12">
                   <div class="timeline-container">
-                    
-                    <div class="mt-4 timeline-continue">
+                    <div class="timeline-end">
+                      <p>Now</p>
+                    </div>
+                    <div class=" timeline-continue">
           
-                    {% for day, posts in posts.items %}
-                    <h2 class=" mt-2 ">{{ day }}</h2>
-                        {% for post in posts %}
-                        <ul>
-                            {% include "posts/partials/postCard.html" %}
-                        </ul>
-                    {% endfor %}
+                    {% for day, post_list in posts.items %}
+                      {% for post in post_list %}
+                        {% if forloop.counter|divisibleby:2 %}
+                            {% include 'posts/postCardRight.html'  %}
+                        {% else %} 
+                            {% include 'posts/postCardLeft.html' %}
+                        {% endif %}
+                        {% endfor %}
+                      {% include 'posts/timelineDate.html' %}
                     {% empty %}
-                    <p>This user hasn't made any posts yet.</p>
-                     {% endfor %}
-                    
+                      <p>This user hasn't made any posts yet.</p>
+                    {% endfor %}
+                  </div>
+                  <div class="timeline-start">
+                    <p>Joined</p>
+                  </div>
+                  <div class="timeline-launch">
+                    <div class="timeline-box">
+                      <div class="timeline-text">
+                        <h3>First joined Y</h3>
+                      </div>
+                    </div>
                   </div>
                 </div>
               </div>
             </div>
         </div>
     </div>
+  </div>
 </div>
 
 {% endblock %}
