add margin to the top of main - avoid navbar

--- a/ydotcom/main/templates/main/base.html
+++ b/ydotcom/main/templates/main/base.html
@@ -26,7 +26,7 @@
 <body>
     {% include "partials/navbar.html" %}
     
-    <main id="main"> 
+    <main id="main" class="mt-5"> 
     {% block content %}
     {% endblock %}
     </main>
