fix navbar to top

--- a/ydotcom/main/templates/partials/navbar.html
+++ b/ydotcom/main/templates/partials/navbar.html
@@ -1,4 +1,4 @@
-<nav class="navbar bg-body-tertiary ">
+<nav class="navbar bg-body-light fixed-top">
     <div class="container-fluid">
       <a class="navbar-brand">Y.com</a>
       
