--- a/ydotcom/posts/static/posts/style.css
+++ b/ydotcom/posts/static/posts/style.css
@@ -1,254 +1,269 @@
+*,
+*::before,
+*::after {
+    box-sizing: border-box;
+}
+
+body {
+    margin: 0;
+    font-family: Arial, Helvetica, sans-serif;
+    background: #ffffff;
+}
+
 .timeline {
     position: relative;
     width: 100%;
-    padding: 30px 0;
-  }
-  
-  .timeline .timeline-container {
-    position: relative;
-    width: 100%;
-  }
-  
-  .timeline .timeline-end,
-  .timeline .timeline-start,
-  .timeline .timeline-year {
-    position: relative;
-    width: 100%;
-    text-align: center;
-    z-index: 1;
-  }
-  
-  .timeline .timeline-end p,
-  .timeline .timeline-start p,
-  .timeline .timeline-year p {
-    display: inline-block;
-    width: 80px;
-    height: 80px;
-    margin: 0;
-    padding: 30px 0;
-    text-align: center;
-    background: linear-gradient(#4F84C4, #00539C);
-    border-radius: 100px;
-    box-shadow: 0 0 5px rgba(0, 0, 0, .4);
-    color: #ffffff;
-    font-size: 14px;
-    text-transform: uppercase;
-  }
-  
-  .timeline .timeline-year {
-    margin: 30px 0;
-  }
-  
-  .timeline .timeline-continue {
-    position: relative;
-    width: 100%;
-    padding: 60px 0;
-  }
-  
-  .timeline .timeline-continue::after {
+    max-width: 1140px;
+    margin: 0 auto;
+    padding: 15px 0;
+}
+
+/* Timeline line down the middle */
+.timeline::after {
+    content: '';
     position: absolute;
-    content: "";
-    width: 1px;
-    height: 100%;
+    width: 2px;
+    background: #006E51;
     top: 0;
+    bottom: 0;
     left: 50%;
     margin-left: -1px;
-    background: #4F84C4;
-  }
-  
-  .timeline .row.timeline-left,
-  .timeline .row.timeline-right .timeline-date {
-    text-align: right;
-  }
-  
-  .timeline .row.timeline-right,
-  .timeline .row.timeline-left .timeline-date {
-    text-align: left;
-  }
-  
-  .timeline .timeline-date {
-    font-size: 14px;
-    font-weight: 600;
-    margin: 41px 0 0 0;
-  }
-  
-  .timeline .timeline-date::after {
-    content: '';
-    display: block;
-    position: absolute;
-    width: 14px;
-    height: 14px;
-    top: 45px;
-    background: linear-gradient(#4F84C4, #00539C);
-    box-shadow: 0 0 5px rgba(0, 0, 0, .4);
-    border-radius: 15px;
-    z-index: 1;
-  }
-  
-  .timeline .row.timeline-left .timeline-date::after {
-    left: -7px;
-  }
-  
-  .timeline .row.timeline-right .timeline-date::after {
-    right: -7px;
-  }
-  
-  .timeline .timeline-box,
-  .timeline .timeline-launch {
+}
+
+.container {
+    padding: 15px 30px;
     position: relative;
-    display: inline-block;
-    margin: 15px;
-    padding: 20px;
-    border: 1px solid #dddddd;
-    border-radius: 6px;
+    background: inherit;
+    width: 50%;
+}
+
+.container.left {
+    left: -25%;
+}
+
+.container.right {
+    left: 25%;
+}
+
+/* timeline dot */
+.container::after {
+    content: '';
+    position: absolute;
+    width: 16px;
+    height: 16px;
+    top: calc(50% - 8px);
+    right: -8px;
     background: #ffffff;
-  }
-  
-  .timeline .timeline-launch {
-    width: 100%;
-    margin: 15px 0;
-    padding: 0;
-    border: none;
-    text-align: center;
-    background: transparent;
-  }
-  
-  .timeline .timeline-box::after,
-  .timeline .timeline-box::before {
-    content: '';
-    display: block;
-    position: absolute;
-    width: 0;
-    height: 0;
-    border-style: solid;
-  }
-  
-  .timeline .row.timeline-left .timeline-box::after,
-  .timeline .row.timeline-left .timeline-box::before {
-    left: 100%;
-  }
-  
-  .timeline .row.timeline-right .timeline-box::after,
-  .timeline .row.timeline-right .timeline-box::before {
-    right: 100%;
-  }
-  
-  .timeline .timeline-launch .timeline-box::after,
-  .timeline .timeline-launch .timeline-box::before {
-    left: 50%;
-    margin-left: -10px;
-  }
-  
-  .timeline .timeline-box::after {
-    top: 26px;
-    border-color: transparent transparent transparent #ffffff;
-    border-width: 10px;
-  }
-  
-  .timeline .timeline-box::before {
-    top: 25px;
-    border-color: transparent transparent transparent #dddddd;
-    border-width: 11px;
-  }
-  
-  .timeline .row.timeline-right .timeline-box::after {
-    border-color: transparent #ffffff transparent transparent;
-  }
-  
-  .timeline .row.timeline-right .timeline-box::before {
-    border-color: transparent #dddddd transparent transparent;
-  }
-  
-  .timeline .timeline-launch .timeline-box::after {
-    top: -20px;
-    border-color: transparent transparent #dddddd transparent;
-  }
-  
-  .timeline .timeline-launch .timeline-box::before {
-    top: -19px;
-    border-color: transparent transparent #ffffff transparent;
-    border-width: 10px;
+    border: 2px solid #006E51;
+    border-radius: 16px;
     z-index: 1;
-  }
-  
-  .timeline .timeline-box .timeline-icon {
+}
+
+.container.right::after {
+    left: -8px;
+}
+
+/* timeline dot hor line */
+.container::before {
+  content: '';
+  position: absolute;
+  width: 24px;
+  height: 2px;
+  top: calc(50% - 1px);
+  right: 8px;
+  background: #006E51;
+  z-index: 1;
+}
+
+/* post-date container dot hor line */
+/* timeline dot */
+
+.date-container {
+    padding: 15px 30px;
     position: relative;
-    width: 40px;
-    height: auto;
-    float: left;
-  }
-  
-  .timeline .timeline-icon i {
-    font-size: 25px;
-    color: #4F84C4;
-  }
-  
-  .timeline .timeline-box .timeline-text {
-    position: relative;
-    width: calc(100% - 40px);
-    float: left;
-  }
-  
-  .timeline .timeline-launch .timeline-text {
-    width: 100%;
-  }
-  
-  .timeline .timeline-text h3 {
-    font-size: 16px;
-    font-weight: 600;
-    margin-bottom: 3px;
-  }
-  
-  .timeline .timeline-text p {
+    background: inherit;
+    width: 50%;
+}
+/* 
+.date-container::after {
+    content: '';
+    position: absolute;
+    width: 5em;
+    height: 5em;
+    top: calc(50% - 4em);
+    right: -1em;
+    background: #ffffff00;
+    border: 2px solid #006E51;
+    border-radius: 50%;
+    z-index: 1;
+} */
+
+/* .date-container::before {
+    content: '';
+    position: absolute;
+    width: 24px;
+    height: 2px;
+    top: calc(50% - 1px);
+    right: 8px;
+    background: #006E51;
+    z-index: 1;
+} */
+
+ .date-container .post-date {
+    position: absolute;
+    display: inline-block;
+    padding: 0.8em;
+
+    height: 6em;
+    width: 6em;
+    top: calc(50% - 3em);
+
+    justify-self: center;
+    text-align: center;
+    font-size: 0.8em;
+    font-weight: bold;
+    text-transform: uppercase;
+    word-wrap: normal;
+    letter-spacing: 1px;
+
+    color: #006E51;
+    background: #ffffff;
+
+    /* border: 2px solid #006E51;
+    border-radius: 50%; */
+    
+    z-index: 1;
+} 
+
+/* Post timestamp position */
+.date-container.post-date .post-date {
+    right: -3em;
+}
+
+.container.right::before {
+  left: 8px;
+}
+
+.container .date {
+    position: absolute;
+    display: inline-block;
+    top: calc(50% - 8px);
+    text-align: center;
     font-size: 14px;
-    font-weight: 400;
-    margin-bottom: 0;
-  }
-  
-  @media (max-width: 768px) {
-    .timeline .timeline-continue::after {
-      left: 40px;
+    font-weight: bold;
+    color: #006E51;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    z-index: 1;
+}
+
+
+
+
+
+/* Post timestamp position */
+.container.left .date {
+    right: -22%;
+}
+
+/* Post timestamp position */
+.container.right .date {
+    left: -22%;
+}
+
+/* Unused but leaving it here incase I want to add an icon later */
+/* .container .icon {
+    position: absolute;
+    display: inline-block;
+    width: 40px;
+    height: 40px;
+    padding: 9px 0;
+    top: calc(50% - 20px);
+    background: #F6D155;
+    border: 2px solid #006E51;
+    border-radius: 40px;
+    text-align: center;
+    font-size: 18px;
+    color: #006E51;
+    z-index: 1;
+} */
+
+/* .container.left .icon {
+    right: 56px;
+}
+
+.container.right .icon {
+    left: 56px;
+} */
+
+.container .content {
+    padding: 30px 90px 30px 30px;
+    background: #F6D155;
+    position: relative;
+    border-radius: 0 500px 500px 0;
+}
+
+.container.right .content {
+    padding: 30px 30px 30px 90px;
+    border-radius: 500px 0 0 500px;
+}
+
+.container .content h2 {
+    margin: 0 0 10px 0;
+    font-size: 18px;
+    font-weight: normal;
+    color: #006E51;
+}
+
+.container .content p {
+    margin: 0;
+    font-size: 16px;
+    word-wrap: break-word;
+    line-height: 22px;
+    color: #000000;
+}
+
+@media (max-width: 767.98px) {
+    .timeline::after {
+        left: 90px;
     }
-  
-    .timeline .timeline-end,
-    .timeline .timeline-start,
-    .timeline .timeline-year,
-    .timeline .row.timeline-left,
-    .timeline .row.timeline-right .timeline-date,
-    .timeline .row.timeline-right,
-    .timeline .row.timeline-left .timeline-date,
-    .timeline .timeline-launch {
-      text-align: left;
+
+    .container {
+        width: 100%;
+        padding-left: 120px;
+        padding-right: 30px;
     }
-  
-    .timeline .row.timeline-left .timeline-date::after,
-    .timeline .row.timeline-right .timeline-date::after {
-      left: 47px;
+    
+    .container.right {
+        left: 0%;
     }
-  
-    .timeline .timeline-box,
-    .timeline .row.timeline-right .timeline-date,
-    .timeline .row.timeline-left .timeline-date {
-      margin-left: 55px;
+
+    .container.left::after, 
+    .container.right::after {
+        left: 82px;
     }
-  
-    .timeline .timeline-launch .timeline-box {
-      margin-left: 0;
+    
+    .container.left::before,
+    .container.right::before {
+        left: 100px;
+        border-color: transparent #006E51 transparent transparent;
     }
-  
-    .timeline .row.timeline-left .timeline-box::after {
-      left: -20px;
-      border-color: transparent #ffffff transparent transparent;
+    
+    .container.left .date,
+    .container.right .date {
+        right: auto;
+        left: 15px;
     }
-  
-    .timeline .row.timeline-left .timeline-box::before {
-      left: -22px;
-      border-color: transparent #dddddd transparent transparent;
+    
+    .container.left .icon,
+    .container.right .icon {
+        right: auto;
+        left: 146px;
     }
-  
-    .timeline .timeline-launch .timeline-box::after,
-    .timeline .timeline-launch .timeline-box::before {
-      left: 30px;
-      margin-left: 0;
+    
+    .container.left .content,
+    .container.right .content {
+        padding: 30px 30px 30px 90px;
+        border-radius: 500px 0 0 500px;
     }
-  }
+}
