--- a/ydotcom/posts/templates/posts/postCardLeft.html
+++ b/ydotcom/posts/templates/posts/postCardLeft.html
@@ -1,16 +1,11 @@
 {% load static %}
 
-<div class="row timeline-left">
-    <div class="col-md-6">
-      <div class="timeline-box">
-        <div class="timeline-text">
-          <p align="justify">{{ post.message }}</p>
-        </div>
-      </div>
-    </div>
-    <div class="col-md-6 d-md-block d-none">
-      <p class="timeline-date">
-        {{ post.timestamp }}
+
+<div class="container left">
+  <div class="date">{{ day }}</div>
+  <div class="content">
+      <p>
+          {{ post.message }}
       </p>
-    </div>
+  </div>
 </div>
