update post date

--- a/ydotcom/posts/templates/posts/timelineDate.html
+++ b/ydotcom/posts/templates/posts/timelineDate.html
@@ -1,7 +1,5 @@
-<div class="row">
-    <div class="col-12">
-        <div class="timeline-year">
-            <p>{{day|date:"j M Y"}}</p>
-        </div>
+<div class="date-container post-date ">
+    <div class="post-date rounded-circle border border-dark border-2">
+            {{day|date:"j M Y"}}
     </div>
 </div>
