update color of background

--- a/ydotcom/posts/templates/posts/postCardLeft.html
+++ b/ydotcom/posts/templates/posts/postCardLeft.html
@@ -3,7 +3,7 @@
 
 <div class="container left">
   <div class="date">{{ day }}</div>
-  <div class="content">
+  <div class="content bg-info">
       <p>
           {{ post.message }}
       </p>
