--- a/ydotcom/posts/templates/posts/postCardRight.html
+++ b/ydotcom/posts/templates/posts/postCardRight.html
@@ -2,7 +2,7 @@
 
 <div class="container right">
   <div class="date">{{ day }}</div>
-  <div class="content">
+  <div class="content bg-info">
       <p>
           {{ post.message }}
       </p>
