--- a/ydotcom/posts/templates/posts/timelineDate.html
+++ b/ydotcom/posts/templates/posts/timelineDate.html
@@ -1,5 +1,5 @@
 <div class="date-container post-date ">
-    <div class="post-date rounded-circle border border-dark border-2">
+    <p class="post-date rounded-circle border border-dark border-2 bg-info align-middle">
             {{day|date:"j M Y"}}
-    </div>
+    </p>
 </div>
