refine timeline post date feature

--- a/ydotcom/posts/templates/posts/timelineDate.html
+++ b/ydotcom/posts/templates/posts/timelineDate.html
@@ -1,5 +1,3 @@
-<div class="date-container post-date ">
-    <p class="post-date rounded-circle border border-dark border-2 bg-info align-middle">
-            {{day|date:"j M Y"}}
-    </p>
+<div class="date-container text-center text-wrap round post-date d-flex justify-content-center align-items-center">
+        {{day|date:"j M Y"}} 
 </div>
