center user cards

--- a/ydotcom/main/templates/main/homePage.html
+++ b/ydotcom/main/templates/main/homePage.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <div class="container">
-    <ul class="list-group gap-2">
+    <ul class="list-group gap-2 align-items-center">
     {% for u in users %}
         {% include 'partials/userCard.html' %}
         
