--- a/ydotcom/main/templates/partials/userCard.html
+++ b/ydotcom/main/templates/partials/userCard.html
@@ -1,3 +1,5 @@
-<div class="card list-group-item">
-    <a href="{% url 'User_Posts' u.username  %}"><h5 class="card-title px-6 py-2 bg-body-tertiary">{{ u }}</h5></a>
+{% load static %}
+
+<div class="card user-card col-lg-6 list-group-item text-center">
+    <a class="" href="{% url 'User_Posts' u.username  %}"><h5 class=" card-title px-6 py-2 bg-body-tertiary">{{ u|title }}</h5></a>
   </div>
