add now time for date circle

--- a/ydotcom/posts/templates/posts/timelineDate.html
+++ b/ydotcom/posts/templates/posts/timelineDate.html
@@ -1,3 +1,7 @@
 <div class="date-container text-center text-wrap round post-date d-flex justify-content-center align-items-center">
-        {{day|date:"j M Y"}} 
+        {% if day %}
+                {{day|date:"j M Y"}} 
+        {% else %}
+                Now
+        {% endif %}
 </div>
