--- a/ydotcom/main/templates/main/homePage.html
+++ b/ydotcom/main/templates/main/homePage.html
@@ -5,8 +5,8 @@
     <ul class="list-group gap-2 align-items-center">
     {% for u in users %}
         {% include 'partials/userCard.html' %}
-        
-    {% endfor %}
+        {% endfor %}
+        {% include 'partials/accountManagerCard.html' %}        
     </ul>
 </div>
 {% endblock %}
