--- a/ydotcom/main/templates/partials/navbar.html
+++ b/ydotcom/main/templates/partials/navbar.html
@@ -6,6 +6,7 @@
       <div class="d-flex">
         <a class="mx-2 px-4 py-2" href="{% url 'HomePage' %}">Home</a>
         <a class="mx-2 px-4 py-2" href="{% url 'Logout' %}">Logout</a>
+        <a class="mx-2 px-4 py-2" href="{% url 'TestView' %}">Accounts</a>
       </div>
         {% else %}
       <div class="d-flex">
