--- a/ydotcom/main/templates/partials/userCard.html
+++ b/ydotcom/main/templates/partials/userCard.html
@@ -1,5 +1,13 @@
 {% load static %}
 
-<div class="card user-card col-lg-6 list-group-item text-center">
-    <a class="" href="{% url 'User_Posts' u.username  %}"><h5 class=" card-title px-6 py-2 bg-body-tertiary">{{ u|title }}</h5></a>
-  </div>
+<li  class="start-50 translate-middle-x w-50 my-4 card text-decoration-none" style="width: 18rem;">
+  <a href="{% url 'User_Posts' p.user.username  %}" class="text-decoration-none text-dark" href="">
+    <div class="card-header">
+      <h5 class="d-inline">{{ p.user.username|title }}</h5>
+      <h6 class="d-inline float-end text-muted">{{ p.timestamp| time }}</h6>
+    </div>
+    <div class="card-body">
+      <p class="card-text ">{{ p.message }}</p>
+    </div>
+  </a>
+</li>
