--- a/ydotcom/main/templates/main/landingPage.html
+++ b/ydotcom/main/templates/main/landingPage.html
@@ -28,8 +28,8 @@
                 </div>
             </div>
             <div class="row d-grid gap-2 d-sm-flex justify-content-center">
-                <a class="col btn btn-primary" href="{% url "Login" %}">Log in</a>
-                <a class="col btn btn-outline-secondary"  href="{% url "Register" %}">Register</a>
+                <a class="col btn btn-primary" href="{% url 'accounts:Login' %}">Log in</a>
+                <a class="col btn btn-outline-secondary"  href="{% url 'accounts:Register' %}">Register</a>
             </div>  
         </div>
     </main>
