--- a/ydotcom/main/templates/main/base.html
+++ b/ydotcom/main/templates/main/base.html
@@ -6,32 +6,47 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
     <link rel="stylesheet" href="{% static '/posts/style.css' %}">
-    
+
+    <!-- Select2 -->
+    <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
+    <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
+
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.13/css/select2.min.css" rel="stylesheet" />
     <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
 
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
+
     <title>Y.com</title>
-    {% if messages %}
-    {% for message in messages %}
    
-    <script>
-      alert("{{ message }}");
-    </script>
-   
-    {% endfor %}
-    {% endif %}
 </head>
 <body>
     {% include "partials/navbar.html" %}
     
     <main id="main" class="mt-5"> 
+      {% if messages %}
+        <ul class="messages">
+            {% for message in messages %}
+            <div{% if message.tags %} role="alert" class="alert alert-success {{ message.tags }}"{% endif %}>{{ message }}<button type="button" class="btn-close justify-content-between" data-bs-dismiss="alert" aria-label="Close"></button></div>
+            {% endfor %}
+        </ul>
+      {% endif %}
+
     {% block content %}
     {% endblock %}
     </main>
 </body>
 
+<!-- <script src="{% static 'main/jquery/jquery-3.7.1.js' %}"></script> -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.13/js/select2.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-
+<script>
+  $(document).ready(function() {
+    $('.interests-multiple').select2();
+    $('#PositionSelect').select2();
+    console.log("Hello, World!")
+});
+</script>
 </html>
