--- a/ydotcom/posts/templates/posts/partials/newPostModal.html
+++ b/ydotcom/posts/templates/posts/partials/newPostModal.html
@@ -11,7 +11,7 @@
                     <h5 class="modal-title" id="newPostModalLabel">Create New Post</h5>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
-                <form method="POST" action="{% url 'New_Post' user.username %}" enctype="multipart/form-data">
+                <form method="POST" action="{% url 'posts:New_Post' user.username %}" enctype="multipart/form-data">
                     <div class="modal-body">
                         {% csrf_token %}
                         {{ form|crispy }}
